
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/banner_img"/>

        <android.support.v7.widget.CardView
            android:id="@+id/fast_training_top"
            style="@style/FastTrainingCard"
            android:layout_marginTop="132dp">

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_training_fast"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/training_cards"
            style="@style/MenuButtonCard"
            android:layout_below="@id/banner">

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_training_cards"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/training_pronunciation"
            style="@style/MenuButtonCard"
            android:layout_below="@id/training_cards">

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_training_pronunciation"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/training_listening"
            style="@style/MenuButtonCard"
            android:layout_below="@id/training_pronunciation">

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_training_listening"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/training_matching"
            style="@style/MenuButtonCard"
            android:layout_below="@id/training_listening">

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_training_matching"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/training_composition"
            style="@style/MenuButtonCard"
            android:layout_below="@id/training_matching">

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_training_composition"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/training_true_false"
            style="@style/MenuButtonCard"
            android:layout_below="@id/training_composition">

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_training_true_false"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/training_choose_translation"
            style="@style/MenuButtonCard"
            android:layout_below="@id/training_true_false">

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_training_choose_translation"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/training_image_translation"
            style="@style/MenuButtonCard"
            android:layout_below="@id/training_choose_translation">

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_training_image_translation"/>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/fast_training_bottom"
            style="@style/FastTrainingCard"
            android:layout_below="@id/training_image_translation"
            android:layout_marginBottom="26dp"
            android:layout_marginTop="24dp"
            app:cardElevation="1dp">

            <TextView
                style="@style/MenuButtonText"
                android:text="@string/label_training_fast"/>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>
